--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -34,7 +34,8 @@
  code[class*="language-"]::-moz-selection,
  code[class*="language-"] ::-moz-selection {
      text-shadow: none;
-     background: rgba(29, 59, 83, 0.99);
+     /* background: rgba(29, 59, 83, 0.99); */
+     @apply bg-slate-800
  }
  
  pre[class*="language-"]::selection,
@@ -42,7 +43,8 @@
  code[class*="language-"]::selection,
  code[class*="language-"] ::selection {
      text-shadow: none;
-     background: rgba(29, 59, 83, 0.99);
+     /* background: rgba(29, 59, 83, 0.99); */
+     @apply bg-slate-800
  }
  
  @media print {
@@ -62,7 +64,8 @@
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
      color: white;
-     background: #011627;
+     /* background: #011627; */
+     @apply bg-slate-800
  }
  
  :not(pre) > code[class*="language-"] {
