--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -35,7 +35,7 @@
  code[class*="language-"] ::-moz-selection {
      text-shadow: none;
      /* background: rgba(29, 59, 83, 0.99); */
-     @apply bg-slate-800
+     @apply bg-slate-800 border dark:bg-black dark:border-gray-700
  }
  
  pre[class*="language-"]::selection,
@@ -44,7 +44,7 @@
  code[class*="language-"] ::selection {
      text-shadow: none;
      /* background: rgba(29, 59, 83, 0.99); */
-     @apply bg-slate-800
+     @apply bg-slate-800 border dark:bg-black dark:border-gray-700
  }
  
  @media print {
@@ -65,7 +65,7 @@
  pre[class*="language-"] {
      color: white;
      /* background: #011627; */
-     @apply bg-slate-800
+     @apply bg-slate-800 border dark:bg-black dark:border-gray-700
  }
  
  :not(pre) > code[class*="language-"] {
