--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    p > code {
+        @apply prose-invert border p-1 rounded bg-slate-800 text-white dark:bg-black dark:border-gray-600
+    }
+}
