Changed code style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@
 
 @layer base {
   p > code,
+  section > div > code,
   li > code {
-    @apply prose-invert border p-1 rounded bg-gray-500 text-white dark:border-gray-400;
+    @apply prose-invert border p-1 rounded bg-gray-400 dark:bg-gray-800 text-white dark:border-gray-600;
   }
 }
